--- a/Centric/Views/Dashboard/Dashboard.cshtml
+++ b/Centric/Views/Dashboard/Dashboard.cshtml
@@ -7,11 +7,13 @@
         background-size: cover;
     }
 </style>
-<div class="content-heading bg-white" style="background-color: transparent; border-color: transparent;">
+<div ng-controller="dashboardController" class="content-heading bg-white" style="background-color: transparent; border-color: transparent;">
     <div class="text-center" style="border-color: transparent;">
         <div id="div1">
             <font color="black"><h2>CorePower Planner</h2></font>
-
+        </div>
+        <div style="font-size:20px; color:chartreuse">
+            {{demoText}}
         </div>
         <a class="btn-lg btn-success" href="@Url.Action("Containers", "Layouts")">Take a look</a>
     </div>
