--- a/Centric/Views/Shared/_Layout.cshtml
+++ b/Centric/Views/Shared/_Layout.cshtml
@@ -52,11 +52,11 @@
             <link rel="stylesheet" href="~/lib/material-colors/dist/colors.css">
 
             <!-- Optional styles -->
-            @if (IsSectionDefined("Styles"))
-            {@RenderSection("Styles", required: false)}
+            @if (IsSectionDefined("Styles")) {@RenderSection("Styles", required: false)}
 
             <!-- Application -->
             <link rel="stylesheet" href="~/css/app.css" />
+            <link rel="stylesheet" href="~/Styles/site.css" />
 
         </environment>
 
