--- a/Centric/Views/Layouts/Containers.cshtml
+++ b/Centric/Views/Layouts/Containers.cshtml
@@ -14,7 +14,7 @@
                     it looks clear when type as type.name for type in list which will track all object data
                     so that it can be passed along, but only displays type.name in the picklist
                 *@
-                <select class="form-control" ng-model="selectedCraftType" ng-options="type as type for type in craftObjectList" ng-change="selectCraftSubtypeList()" id="sel1" ">
+                <select class="form-control" ng-model="selectedCraftType" ng-options="type as type.name for type in craftObjectList" ng-change="selectCraftSubtypeList()" id="sel1" ">
                     @*<option value="" disabled selected>Choose a Plane</option>
                         <option value="fixed wing">Fixed Wing</option>
                         <option value="rotocraft">Rotocraft</option>
@@ -62,7 +62,10 @@
 
         </div>
         <div id="middle" class="col-xs-8 h-100" style="border:medium; border-color:red;height: 700px;">
-            <img id="image" style="display: block; margin: 0 auto;">
+            @* ng-src takes image associated with craft type object to dynamically display images
+                These objects should reflect the Json object returned from C# backend so that data
+                from db can be seamlessly integrated with front end*@
+            <img id="image" ng-src="{{selectedCraftType.imgSrc}}" style="display: block; margin: 0 auto;">
         </div>
         <div class="col-xs-2" style="background-color:lightblue;padding:20px;height:700px;">
 
