Admin Portal - created controller, view, and ngController. All emptier as empty as my bank account.

--- a/Centric/Views/Dashboard/Dashboard.cshtml
+++ b/Centric/Views/Dashboard/Dashboard.cshtml
@@ -15,6 +15,7 @@
         <div style="font-size:20px; color:chartreuse">
             {{demoText}}
         </div>
-        <a class="btn-lg btn-success" href="@Url.Action("Containers", "Layouts")">Take a look</a>
+        <a class="btn-lg btn-success" href="@Url.Action("Containers", "Layouts")">CorePower Planner</a>
+        <a class="btn-lg btn-success" href="@Url.Action("AdminPortal", "Admin" )">Admin Portal</a>
     </div>
 </div>
