Fixed syntax error in newComponent.js
Quick commit before messing with file upload service integration to allow admin users to upload images

--- a/Centric/Views/Dashboard/Dashboard.cshtml
+++ b/Centric/Views/Dashboard/Dashboard.cshtml
@@ -12,10 +12,11 @@
         <div id="div1">
             <font color="black"><h2>CorePower Planner</h2></font>
         </div>
-        <div style="font-size:20px; color:chartreuse">
+        <div class="col-sm-12" style="font-size:20px; color:whitesmoke">
             {{demoText}}
         </div>
+        <div class="clearfix"></div>
         <a class="btn-lg btn-success" href="@Url.Action("Containers", "Layouts")">CorePower Planner</a>
-        <a class="btn-lg btn-success" href="@Url.Action("AdminPortal", "Admin" )">Admin Portal</a>
+        <a class="btn-lg btn-success" href="@Url.Action("NewComponent", "Admin" )">Admin Portal</a>
     </div>
 </div>
