--- a/Centric/wwwroot/Styles/site.css
+++ b/Centric/wwwroot/Styles/site.css
@@ -101,3 +101,22 @@
 /* <textarea> CSS fix*/
 
 /* End Float Labels*/
+
+
+
+
+.backgroundMatting {
+    background-color: #0174C5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    height: 100%;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    width: 100%;
+    float: left;
+    min-height: 250px;
+    margin: 0 0 10px 0;
+    flex-direction: column;
+}
+
+
