--- a/Centric/Views/Shared/_Layout.cshtml
+++ b/Centric/Views/Shared/_Layout.cshtml
@@ -159,6 +159,8 @@
     <environment names="Development">
         <!-- Angular-->
         <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular/ng-file-upload/ng-file-upload.js"></script>
+
         <!-- Modernizr-->
         <script src="~/lib/modernizr/modernizr.custom.js"></script>
         <!-- jQuery-->
@@ -255,6 +257,8 @@
     <environment names="Staging,Production">
         <!-- Angular-->
         <script src="~/lib/angular/angular.js"></script>
+        <script src="~/lib/angular/ng-file-upload/ng-file-upload.min.js"></script>
+
         <!-- Modernizr-->
         <script src="~/lib/modernizr/modernizr.custom.js"></script>
         <!-- jQuery-->
