This is another test.

--- a/Centric/Views/Layouts/Containers.cshtml
+++ b/Centric/Views/Layouts/Containers.cshtml
@@ -63,6 +63,7 @@
             </div>
 
         </div>
+        @*this is a comment*@
         <div id="middle" class="col-xs-8 h-100" style="border:medium; border-color:red;height: 700px;">
             @* ng-src takes image associated with craft type object to dynamically display images
                 These objsects should reflect the Json object returned from C# backend so that data
