pushing to maybe we can fix this

--- a/Centric/Views/Dashboard/Dashboard.cshtml
+++ b/Centric/Views/Dashboard/Dashboard.cshtml
@@ -16,7 +16,7 @@
             {{demoText}}
         </div>
         <div class="clearfix"></div>
-        <a class="btn-lg btn-success" href="@Url.Action("Containers", "Layouts")">CorePower Planner</a>
+        <a class="btn-lg btn-success" href="@Url.Action("Layer1", "Lopa")">CorePower Planner</a>
         <a class="btn-lg btn-success" href="@Url.Action("NewComponent", "Admin" )">Admin Portal</a>
     </div>
 </div>
